# Algorithms

./: .gitignore  CMakeLists.txt  README.md  bucket_sort.cpp  counting_sort.cpp  main.cpp  merge_sort.cpp  quick_sort.cpp  selection_sort.cpp
Tests/: searching_tests.cpp  tests.cpp
search_algorithms/: exponential_search.cpp  iterative_binary_search.cpp  jump_search.cpp  linear_search.cpp  recursive_binary_search.cpp  ternary_search.cpp
sort_algorithms/: bubble_sort.cpp  insertion_sort.cpp  merge_sort.cpp
string_manipulation/: anagram.cpp  capitalize_first_letter.cpp  find_number_of_vowels.cpp  is_palindrome.cpp  is_rotation.cpp  most_repeated_charecter.cpp  remove_duplicates.cpp  reverse_words_order.cpp  string_reverser.cpp
